--- a/.env
+++ b/.env
@@ -10,13 +10,13 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
-#DB_DATABASE=seadb
-#DB_USERNAME=root
-#DB_PASSWORD=
+DB_DATABASE=seadb
+DB_USERNAME=root
+DB_PASSWORD=
 
-DB_DATABASE=dqtjzygfjh
-DB_USERNAME=dqtjzygfjh
-DB_PASSWORD=tqsmb99PSt
+#DB_DATABASE=dqtjzygfjh
+#DB_USERNAME=dqtjzygfjh
+#DB_PASSWORD=tqsmb99PSt
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
